--- a/src/scss/modules/_testimonials-section.scss
+++ b/src/scss/modules/_testimonials-section.scss
@@ -53,6 +53,7 @@
   }
   &__text {
     max-width: 20rem;
+    line-height: 1.5;
     @include mQ($ipad) {
       max-width: 25rem;
     }
